--- a/dashboard.html
+++ b/dashboard.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MJC Portal V.2 - Dashboard</title>
+    <title>MJC Portal - Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="MJC Portal Dashboard">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 <body>
     <!-- Header -->
@@ -16,10 +18,10 @@
                 <div></div>
             </div>
             <img src="images/Major_Logo.png" alt="MJC Logo" class="logo-image">
-            <span class="logo-text">MJC Portal V.2</span>
+            <span class="logo-text">MJC Portal</span>
         </div>
         <div class="nav-buttons" id="nav-buttons">
-            <a href="#" class="nav-button" id="username-display">ADMIN</a>
+            <a href="#" class="nav-button" id="username-display" title="Username">ADMIN</a>
             <span style="color:rgb(255, 255, 255); margin: 0 5px; display: inline-block; vertical-align: middle;">|</span>
             <a href="#" class="logout-btn" id="logout-btn">Logout</a>
         </div>
@@ -251,8 +253,6 @@
        
         <!-- Content Area -->
         <div class="content" id="content">
-            <!-- Content will be loaded dynamically -->
-            <div class="loading">Loading content...</div>
         </div>
     </div>
 
