--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <div class="header">
         <div class="logo">
             <img src="images/Major_Logo.png" alt="MJC Logo" class="logo-image">
-            <span class="logo-text">MJC Portal V.2</span>
+            <span class="logo-text">MJC Portal </span>
         </div>
     </div>
 
@@ -22,7 +22,7 @@
                 <!-- Background image will be added via CSS -->
             </div>
             <form class="login-form" id="login-form">
-                <h2><span style="font-size: 24px; font-weight: normal; opacity: 0.7; display: block;">MJC Portal V.2</span></h2>
+                <h2><span style="font-size: 24px; font-weight: normal; opacity: 0.7; display: block;">MJC Portal </span></h2>
                 <div class="form-group">
                     <label for="username">User Name</label>
                     <div class="input-icon-wrapper">
